[package]
name = "star-memory"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
windows = "0.19.0"
win-bindings = { path = "./win-bindings" }

[target.'cfg(unix)'.dependencies]
procfs = "0.10.1"


[workspace]
members = [
    "./win-bindings"
]