[package]
name = "star-utils"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
windows = "0.19.0"
win-bindings = { path = "./win-bindings" }
kernel32-sys = "0.2.2"

[target.'cfg(unix)'.dependencies]
procfs = "0.9.0"
libc = "0.2"

[workspace]
members = [
    "./win-bindings"
]